--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: africa_schools
 description: A package that provides Tertiary Institutions in the African continent.
 version: 0.0.1
-homepage:
+homepage: https://github.com/jeremiahseun/africa_schools
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
